--- a/Task4 Calculator/index.html
+++ b/Task4 Calculator/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <h2>Calculator</h2>
         <div class="calculator">
             <input type="text" name="screen" id="screen">
             <table>
